# Threaded-Text-Analyzer

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  README_DEBUG.md  REQUIREMENTS.md
apps/: CMakeLists.txt  main.c
include/: analyzer.h  argtable_parser.h  generator.h  map.h  map_utils.h  parser.h  thread_manager.h  word.h
src/: CMakeLists.txt  analyzer.c  argtable_parser.c  generator.c  map.c  map_utils.c  node.c  parser.c  thread_manager.c  word.c
tests/: CMakeLists.txt  test_analyzer.c  test_generator.c  test_rb_iterator.c  test_rb_tree.c  test_rb_tree_multi_thread.c  test_word.c
